--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
         <nav class="nav">
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
-            <a href="#contectme">ContectMe</a>
+            <a href="#content">ContectMe</a>
         </nav>
     </header>
 
 
 
     <section class="main">
-        <div>
+        <div class="text-main">
             <h2>hello, I'm Abdullah <br> <span>Web Developer</span></h2>
             <h3>I Build Great Websites</h3>
-            <a href="#projects" class="main-botn">View My Work</a>
+            <div class="botn">
+                <a href="#projects" class="main-botn">View My Work</a>
+            </div>
 
             <div class="socail-icons">
                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -179,5 +181,17 @@
 
         </div>
     </section>
+
+    <footer class="footer">
+        <p class="footer-title">Copyrights @ <span>Abdullah Said</span></p>
+        
+        <div class="socail-icons">
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+        </div>
+
+    </footer>
 </body>
 </html>
